# agent-hub

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  ROADMAP.md  SETUP.md  UI_REDESIGN_COLOR_HIERARCHY.md  pyproject.toml  start.sh
integrations/codex/: README.md  config-snippet.toml  install.sh
scripts/: ai-tmux  codex-hub-hook.sh
src/agent_hub/: config.py  db.py  main.py  models.py
src/agent_hub/api/: agent.py  events.py  internal.py  sessions.py  tmux.py  ws.py
src/agent_hub/mcp/: server.py
src/agent_hub/services/: event_processor.py  monitor_agent.py  pane_pipe.py  restore.py  session_manager.py  telegram_bot.py  transcript_reader.py
src/agent_hub/web/: routes.py
src/agent_hub/web/templates/: _card_fragment.html  _macros.html  _session_card.html  agent.html  base.html  dashboard.html  idle.html  session.html  stopped.html  tmux_hub.html
tests/: test_codex_parser.py  test_restore_cwd.py  test_tmux_command_resolver.py
tests/fixtures/: codex-bash-approval-long-heredoc.txt  codex-edit-approval.txt  codex-generic-approval-unknown-ui.txt  codex-mcp-approval-wrapped.txt
