[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "0.1.0"
description = "Claude Code session management hub"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "fastmcp>=3.2.3",
    "httpx>=0.28.1",
    "python-telegram-bot>=21.0",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.scripts]
agent-hub = "agent_hub.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
